force-app/main/default/objects/Service_Recovery_Escalation__c/Service_Recovery_Escalation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Global-Service Recovery Escalation</label>
</CustomObject>