force-app/main/default/objects/Service_Recovery_Escalation__c/fields/CLR2__c.field-meta.xml
<CustomField>
    <fullName>CLR2__c</fullName>
    <label>CLR2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>