force-app/main/default/objects/Service_Recovery_Escalation__c/fields/CLR3__c.field-meta.xml
<CustomField>
    <fullName>CLR3__c</fullName>
    <label>CLR3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>