force-app/main/default/objects/Service_Recovery_Escalation__c/fields/Platforms__c.field-meta.xml
<CustomField>
    <fullName>Platforms__c</fullName>
    <label>Platforms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>