force-app/main/default/objects/Service_Recovery_Escalation__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Platforms__c</columns>
    <columns>Type__c</columns>
    <columns>CLR2__c</columns>
    <columns>CLR3__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>